# invariance-for-classification

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: tests.yml
scripts/: ECDF.py  ECDF_level.py  complex_DGP_evaluation.py  example_usage.py  experiment_for_inv_tests.py
scripts/causal_chambers/: 2.py  2_v2.py  2_v4.py  adversarial_follower_dspur.py  analyze_ir3_vis3_pvalues.py  causal_chambers_datasets_1.py  correlation_by_environment.py  dataset_1.py  dataset_1_v1.py  dataset_1_v2.py  dataset_1_v3.py  dataset_1a.py  dataset_1b.py  dataset_2.py  dataset_5_v1.py  dataset_5_v2.py  dataset_lin_nonlin.py  dataset_spur.py  evaluate_OOD_predictions.py  evaluate_all.py  evaluate_all_tests.py  evaluate_invariance_AUC.py  evaluate_invariance_AUC_precomputed.py  evaluate_stabclass.py  experiment_hyperparams.py  gcm_ir1_ir2.py  generate_latex_tables.py  irm_penalty_analysis.py  runtime_analysis.py  sample_efficiency.py  sample_size_experiment_1b.py  sample_size_experiment_d_nonlin.py  utils.py  visualize_datasets.py
scripts/causal_chambers/baselines/: __init__.py  icp.py  irm_2.py  irm_linear.py  irm_nn.py  neural_net.py
scripts/causal_chambers/data/: 1_small_test.csv  1_small_train.csv  1_test.csv  1_train.csv  1_v1_small_test.csv  1_v1_small_train.csv  1_v1_test.csv  1_v1_train.csv  1_v2_small_test.csv  1_v2_small_train.csv  1_v2_test.csv  1_v2_train.csv  1_v3_small_test.csv  (+34 more)
src/invariance_for_classification/: __init__.py  synthetic_DGP.py
synthetic_stable_blanket_experiments/: README.md  plot_paper_figures.py  plot_results.py  run_experiments.py  run_minimax_experiment.py
synthetic_stable_blanket_experiments/synthetic_experiments/: __init__.py  adversary.py  experiment.py  models.py  plotting.py  scm.py
tests/: test_data_generation.py  test_invariance_tests.py  test_lr_support.py  test_mixed_support.py  test_stabilized.py  test_stabilized_classifier.py
(+18 files in other folders)
